// アカウントGoogleURL取得リクエスト
syntax = "proto3";

package api.admin;

message AccountGetGoogleUrlRequest {

}
