// Google認証URL
syntax = "proto3";

package api.admin;

message AdminAccountGoogleUrl {
  string url = 1;
}
